kubernetes/live/linode/lidled-mordev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidled-mordev
  namespace: urbit
  labels:
    app: lidled-mordev
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: mordev.soapbubble.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lidled-mordev
            port: 
              number: 80
  tls:
  - hosts:
    - mordev.soapbubble.online
    secretName: mordev-soapbubble-online-tls
---
